# SuperUPS

./: .gitignore  .gitmodules  LICENSE.md  README.md  SETUP.md  build.sh
controller/: platformio.ini
controller/src/: main.cpp
docs/: diagrams.drawio.xml  i2c_registers.md  microcontroller_design.md
host_monitor/: superups.service  ups.py  ups.service  upsdaemon.py
host_monitor/obsolete/: upscontrol.py
host_monitor/test/: stress.py  test_getters_setters.py  test_ups_statemachine.py
hw/pogo_holder/: 171826-4.kicad_sym  641737-1.kicad_sym  TS-1187A-B-A-B.kicad_sym  ras_pi_supercap_ups.kicad_pcb  ras_pi_supercap_ups.kicad_pro  ras_pi_supercap_ups.kicad_sch  raspi_connectors.kicad_sch  supercap_library.kicad_sym
hw/pogo_holder/gerbers/: ras_pi_supercap_ups-B_Cu.gbl  ras_pi_supercap_ups-B_Mask.gbs  ras_pi_supercap_ups-B_Paste.gbp  ras_pi_supercap_ups-B_Silkscreen.gbo  ras_pi_supercap_ups-Edge_Cuts.gm1  ras_pi_supercap_ups-F_Cu.gtl  ras_pi_supercap_ups-F_Mask.gts  ras_pi_supercap_ups-F_Paste.gtp  ras_pi_supercap_ups-F_Silkscreen.gto  ras_pi_supercap_ups-NPTH.drl  ras_pi_supercap_ups-PTH.drl
hw/pogo_holder/raspberrypi_supercap_ups_lib.pretty/: 171826-4.step  641737-1_TYC.kicad_mod  SLO0530H_Model-Body.step  SMT_Resistor_4122.kicad_mod  SMT_Resistor_4122.step  SuperCapacitor_D10.0mm_P5.00mm.kicad_mod  TE_171826-4.kicad_mod  TPS54331DR.step  Wurth_Barrel_Jack.step  iigs_picasso.kicad_mod
hw/v0p9/: 171826-4.lib  641737-1.lib  fp-info-cache  ras_pi_supercap_ups.kicad_prl  ras_pi_supercap_ups.kicad_pro  ras_pi_supercap_ups.kicad_sch  ras_pi_supercap_ups.xml  raspi_connectors.kicad_sch
hw/v0p9/gerbers/: jlcpcb_bom.csv  ras_pi_supercap_ups-B_Cu.gbl  ras_pi_supercap_ups-B_Mask.gbs  ras_pi_supercap_ups-B_Paste.gbp  ras_pi_supercap_ups-B_Silkscreen.gbo  ras_pi_supercap_ups-Edge_Cuts.gm1  ras_pi_supercap_ups-F_Cu.gtl  ras_pi_supercap_ups-F_Mask.gts  ras_pi_supercap_ups-F_Paste.gtp  (+4 more)
hw/v0p9p5/: 12v_buck_converter.kicad_sch  SLO0530H_Model.FCStd1  ras_pi_supercap_ups.kicad_pcb  ras_pi_supercap_ups.kicad_pro  ras_pi_supercap_ups.kicad_sch  raspi_connectors.kicad_sch  supercap_library.kicad_sym
hw/v1p0/: 12v_buck_converter.kicad_sch  SLO0530H_Model.FCStd  fp-lib-table  ras_pi_supercap_ups.csv  ras_pi_supercap_ups.kicad_pcb  ras_pi_supercap_ups.kicad_pro  ras_pi_supercap_ups.kicad_sch  ras_pi_supercap_ups.xml  raspi_connectors.kicad_sch  sym-lib-table
hw/v1p1/: 12v_buck_converter.kicad_sch  TPS54331DR.kicad_sym  buck_conerter.kicad_sch  capacitor-Capacitor.step  capacitor-Capacitor.wrl  capacitor.FCStd  ras_pi_supercap_ups.kicad_pcb  ras_pi_supercap_ups.kicad_pro  ras_pi_supercap_ups.kicad_sch  raspi_connectors.kicad_sch  supercap_library.kicad_sym  sym-lib-table
i2cdemo/: CMakeLists.txt  I2c_slave_interrupt.c  I2c_slave_interrupt.h  main.c
spl_test/: platformio.ini
stm8_controller/: .gitignore  CMakeLists.txt  adc_utilities.c  i2c_register_data.c  i2c_register_data.h  i2c_slave.c  i2c_slave.h  main.c  uart.c  uart_utilities.h  ups_constants.h  ups_state_machine.c  ups_state_machine.h
stm8_controller/inc/: adc_utilities.h  gpio_handler.h  i2c_register_data.h  i2c_slave.h  mosfet_handler.h  power_control.h  timer4_utilities.h  uart_utilities.h  ups_constants.h  ups_state_machine.h
stm8_controller/src/: adc_utilities.c  gpio_handler.c  i2c_register_data.c  i2c_slave.c  main.c  mosfet_handler.c  power_control.c  timer4_utilities.c  uart_utilities.c  ups_state_machine.c
stm8_controller/test/: test_ring_buff.c
stm8_controller/tools/: stdout_i2c.py
(+42 files in other folders)
